display screen updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <div class="col-4 rounded m-2 w-25 d-flex flex-wrap justify-content-end p-2" style="height: 80px; background-color: #181F32; box-shadow: 1px 5px 4px ;" id="display">
 
           </div>  
-          <div class="col-4 rounded m-2 p-3" style="height: 340px; width: 475px; background-color: #181F32; box-shadow: 1px 5px 4px ;">
+          <div class="col-4 rounded m-2 p-3 w-25 d-flex flex-column justify-content-evenly" style="height: 340px;  background-color: #181F32; box-shadow: 1px 5px 4px ;">
                 <div class="row d-flex flex-wrap justify-content-evenly p-2">
                     <h3 class="btn btn-light" style="width: 75px; background-color: #EAE3DB;"onclick="selected(7)">7</h3>
                     <h3 class="btn btn-light" style="width: 75px; background-color: #EAE3DB;"onclick="selected(8)">8</h3>
